fix: remove some spelling mistakes

--- a/2022.md
+++ b/2022.md
@@ -2,7 +2,7 @@
 
  - I want to learn clean architecture
  - I want to learn unit tests and use it on my projects
- - I want to learn microsservices and how to use it
+ - I want to learn microservices and how to use it
  - I want to learn how to use cloud services
 
 
@@ -11,7 +11,7 @@
  - I want to be confidant to speak and write in english
  - I want to learn functional programming
  - I want to learn about containers / kubernetes and dockers
- - I want to learn about messages broker and message events]
+ - I want to learn about messages broker and message events
  - I want to learn about tests end to end
 
 ## Projects
@@ -25,9 +25,9 @@
 > I decided to use express but now my backend is totally independent of frameworks, I started my project using rules of clean architecture and solid principles with this changes I think that Blocks can be mature more.
 >
  *October 2022*
- [Blocks Revit Backend Refactoring to Microsservices]
+ [Blocks Revit Backend Refactoring to Microservices]
 > It was a long time on my job that I was sad with the backend architecture that we had, was it bad? It was,
 > First of all let me show you about the company, Blocks is a plugin made to help users to download 3d models for Revit more easily, the architecture is very simple it just a CRUD where the user can download the plugin and acess a list of 3d models and use them, ok but what was the problem with Backend? everything.
 > We had just one simple monolhitic backend that your responsability it was: take care of payments, user registers, list 3d models, socket behaviour etc...
 > Don't you think that is a lot of behaviours for a unique backend? yeah I really think too.
-> Because of it I decided to split this backend in microsservices ;) so now we got 2 micro backends that every backend has one behaviour like user service (to auth user and take care of payments), plugin service (to take care about crud plugin core) with this if plugin service take down for some reason our company will be able to continue selling without interruptions.
+> Because of it I decided to split this backend in microservices ;) so now we got 2 micro backends that every backend has one behaviour like user service (to auth user and take care of payments), plugin service (to take care about crud plugin core) with this if plugin service take down for some reason our company will be able to continue selling without interruptions.
