--- a/2022.md
+++ b/2022.md
@@ -31,3 +31,11 @@
 > We had just one simple monolhitic backend that your responsability it was: take care of payments, user registers, list 3d models, socket behaviour etc...
 > Don't you think that is a lot of behaviours for a unique backend? yeah I really think too.
 > Because of it I decided to split this backend in microservices ;) so now we got 2 micro backends that every backend has one behaviour like user service (to auth user and take care of payments), plugin service (to take care about crud plugin core) with this if plugin service take down for some reason our company will be able to continue selling without interruptions.
+
+ *October 2022*
+ [Blocks Revit Backend Adding Cache on Endpoints]
+> I've added cache management for my endpoints, and I will tell you the reason for it,
+> I was thinking about how I could reduce my requests endpoints time by half because here on Blocks we have a lot of endpoints that no change the result, So...
+> If you have a GET endpoint that no changes the result, why you don't cache it? yeah it's what I did!
+> I cached the GET results with a TTL for 10 minutes, So if the user reach the endpoint It will create a cache for all others users that will revalidate after 10 minutes.
+> The time response that was 800ms/700ms now is 50ms/ 40ms!
