--- a/2022.md
+++ b/2022.md
@@ -39,3 +39,10 @@
 > If you have a GET endpoint that no changes the result, why you don't cache it? yeah it's what I did!
 > I cached the GET results with a TTL for 10 minutes, So if the user reach the endpoint It will create a cache for all others users that will revalidate after 10 minutes.
 > The time response that was 800ms/700ms now is 50ms/ 40ms!
+
+ *December 2022*
+ [Blocks Revit How I Reduced 50% of custs on Digital Ocean's spaces]
+> One thing that us on Blocks was suffering is the custs of Digital Ocean Spaces, 
+> We were paying among 300$ with digital ocean's spaces transfers custs, So I decided to change it
+> What did I do to change this situation ? 
+> I cached the GET results images as blob, So if the user get the images on first load It will create a cache blob for that image and on next get from that image it will returns from blob instead of space.
